[gd_scene load_steps=16 format=3 uid="uid://bv0di27k8pqj3"]

[ext_resource type="Script" uid="uid://cwe6d0flwnrw6" path="res://objects/logicgate/andgate/and_gate.gd" id="1_jnbtl"]
[ext_resource type="Texture2D" uid="uid://bksmf3e7bmxli" path="res://Assets/Objectives/LogicGates.png" id="2_jnbtl"]
[ext_resource type="PackedScene" uid="uid://2fgvrejwqyfe" path="res://objects/signal_receiver_node.tscn" id="3_a3mm6"]
[ext_resource type="PackedScene" uid="uid://ceqe2mjgjcxqd" path="res://objects/signal_transmitter_node.tscn" id="4_io0d7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80e00"]
size = Vector2(48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8d7v"]
atlas = ExtResource("2_jnbtl")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3mm6"]
atlas = ExtResource("2_jnbtl")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_io0d7"]
atlas = ExtResource("2_jnbtl")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjws4"]
atlas = ExtResource("2_jnbtl")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_bjws4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8d7v")
}],
"loop": true,
"name": &"full",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3mm6")
}],
"loop": true,
"name": &"inputa",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_io0d7")
}],
"loop": true,
"name": &"inputb",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjws4")
}],
"loop": true,
"name": &"none",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_drkg3"]
atlas = ExtResource("2_jnbtl")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq3ms"]
atlas = ExtResource("2_jnbtl")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1clc1"]
atlas = ExtResource("2_jnbtl")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tv31"]
atlas = ExtResource("2_jnbtl")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_80e00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_drkg3")
}],
"loop": true,
"name": &"full",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq3ms")
}],
"loop": true,
"name": &"inputa",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1clc1")
}],
"loop": true,
"name": &"inputb",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tv31")
}],
"loop": true,
"name": &"none",
"speed": 0.0
}]

[node name="AndGate" type="StaticBody2D"]
script = ExtResource("1_jnbtl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_80e00")

[node name="NormalState" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bjws4")
animation = &"none"

[node name="NotState" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_80e00")
animation = &"none"

[node name="SignalReceiverNode1" parent="." instance=ExtResource("3_a3mm6")]

[node name="SignalReceiverNode2" parent="." instance=ExtResource("3_a3mm6")]

[node name="SignalTransmitterNode" parent="." instance=ExtResource("4_io0d7")]
